--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/rushhour?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=rootroot
-spring.jpa.hibernate.ddl-auto= create
+spring.jpa.hibernate.ddl-auto= none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.logging.level.org.hibernate.SQL=debug
 spring.jpa.show-sql=true
 
 spring.flyway.baseline-on-migrate=true
+spring.flyway.enabled=true
