--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,5 @@ spring.jpa.show-sql=true
 spring.flyway.baseline-on-migrate=true
 spring.flyway.enabled=true
 
-rsa.rsa-private-key=classpath:certs/private.pem
-rsa.rsa-public-key=classpath:certs/public.pem
+rsa.private-key=classpath:certs/private.pem
+rsa.public-key=classpath:certs/public.pem
