--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,8 @@ spring.jpa.show-sql=true
 spring.flyway.baseline-on-migrate=true
 spring.flyway.enabled=true
 
+app.jwt.secret-key=secret
+app.jwt.expiration=1800000
+
 rsa.private-key=classpath:certs/private.pem
 rsa.public-key=classpath:certs/public.pem
