--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,9 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.logging.level.org.hibernate.SQL=debug
 spring.jpa.show-sql=true
 
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/docs.html
+
 spring.flyway.baseline-on-migrate=true
 spring.flyway.enabled=true
 
